src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>M_W_DBE_Actual__c</fullName>
        <inlineHelpText>Percent of project actually subcontracted to Woman-owned, Minority-owned, or Disadvantaged Business Enterprises</inlineHelpText>
        <label>M/W/DBE Actual</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M_W_DBE_Goal__c</fullName>
        <inlineHelpText>Percent of project to be subcontracted to Woman-owned, Minority-owned, or Disadvantaged Business Enterprises</inlineHelpText>
        <label>M/W/DBE Goal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market_Sector__c</fullName>
        <description>Originally Client Subgroup, changed to Market Sector, changed back to Client Subgroup after FY14 BD ROI terminology change.</description>
        <formula>TEXT( Owner__r.Client_Subgroup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inherited from the Owner Account record. This is a subset of Client Group</inlineHelpText>
        <label>Client Subgroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_fee_value__c</fullName>
        <description>Change in booking (increase or decrease), including contract modifications.</description>
        <inlineHelpText>Current value of this contract, including contract modifications.</inlineHelpText>
        <label>Modified Fee Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Needs_Translation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Projects created from the Oracle feed that are in French need to be translated. This check box will indicate which projects have this requirement.</description>
        <inlineHelpText>Check if project is written in French.</inlineHelpText>
        <label>Needs Translation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_to_CM__c</fullName>
        <description>A note created by the content managers that should appear immediately below the project label on output or display of the project.  Should appear in red text for visibility and not print if the user retrieves the project and sends it to print. Displays in the Summary Page</description>
        <inlineHelpText>Created by the content managers-should appear immediately below project label on output or display of the project.  Should appear in red text for visibility &amp; not print if the user retrieves the project &amp; sends it to print. Displays in the Summary Page</inlineHelpText>
        <label>Note to CM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Note_to_User__c</fullName>
        <inlineHelpText>Cautions for proposal writers and others using this project.</inlineHelpText>
        <label>Note to User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotesFiles__c</fullName>
        <label>Notes Files</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_on_Staff__c</fullName>
        <description>Any notes the content managers want to add on the project team</description>
        <inlineHelpText>Any notes the content managers want to add on the project team</inlineHelpText>
        <label>Notes on Staff</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Profiles</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OracleAECOMDistrict__c</fullName>
        <description>From Oracle Feed</description>
        <inlineHelpText>From Oracle Feed</inlineHelpText>
        <label>Oracle District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleAECOMOrg__c</fullName>
        <description>From Oracle Feed</description>
        <inlineHelpText>From Oracle Feed</inlineHelpText>
        <label>Oracle AECOM Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleClientNumber__c</fullName>
        <description>From Oracle Feed</description>
        <inlineHelpText>From Oracle Feed</inlineHelpText>
        <label>Oracle Client Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleDepartment__c</fullName>
        <description>From Oracle Feed</description>
        <inlineHelpText>From Oracle Feed</inlineHelpText>
        <label>Oracle Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleDescription__c</fullName>
        <description>From Oracle Feed</description>
        <inlineHelpText>From Oracle Feed</inlineHelpText>
        <label>Oracle Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleName__c</fullName>
        <description>From Oracle Feed</description>
        <inlineHelpText>From Oracle Feed</inlineHelpText>
        <label>Oracle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleNetSalesRevenue__c</fullName>
        <description>From Oracle Feed</description>
        <inlineHelpText>From Oracle Feed</inlineHelpText>
        <label>Oracle Net Sales Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OracleOffice__c</fullName>
        <description>From Oracle Feed</description>
        <inlineHelpText>From Oracle Feed</inlineHelpText>
        <label>Oracle Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OraclePercentComplete__c</fullName>
        <description>From Oracle Feed</description>
        <inlineHelpText>From Oracle Feed</inlineHelpText>
        <label>Oracle % Complete</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OracleStatus__c</fullName>
        <description>From Oracle Feed</description>
        <inlineHelpText>From Oracle Feed</inlineHelpText>
        <label>Oracle Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Booked_Amount__c</fullName>
        <formula>Opportunity__r.Oracle_Booked_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Booked Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oracle_Completion_Date__c</fullName>
        <formula>Opportunity__r.Oracle_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Manager__c</fullName>
        <formula>Opportunity__r.Oracle_Project_Manager__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Num__c</fullName>
        <formula>BLANKVALUE(Oracle_Project_Number_from_Opportunity__c, Oracle_Project_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Project Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Number__c</fullName>
        <inlineHelpText>Job number in Oracle - used as the key to connect this project with Oracle, Media Bank, and any other related systems.</inlineHelpText>
        <label>Oracle Project Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Number_from_Opportunity__c</fullName>
        <formula>Opportunity__r.Oracle_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Project Number from Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Client_Output__c</fullName>
        <description>Account Name</description>
        <formula>if(len( Confidential_Owner_Alias__c )&gt;0, Confidential_Owner_Alias__c ,
if(len(Owner__r.Name)&gt; 0, Owner__r.Account_Name_for_Labels__c ,  Legacy_Owner__c )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account name that will appear on formatted project descriptions. Accounts for confidentiality and reverses account names such as &apos;Chicago, City of&apos;</inlineHelpText>
        <label>Owner (Client) Output</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project owner (the entity that is paying for the work).</description>
        <inlineHelpText>Also called End Client - the entity that is paying for the work, not necessarily the account AECOM bills to. See Prime account field also.</inlineHelpText>
        <label>Owner/End Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owners_Total_cost__c</fullName>
        <description>Total cost of the project, to the owner.</description>
        <inlineHelpText>Total cost of the project to the owner, not just AECOM&apos;s fees.</inlineHelpText>
        <label>Owner&apos;s Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance_evaluation_attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if there is a performance evaluation is attached in the Notes and Attachments area.</description>
        <inlineHelpText>Checked if there is a performance evaluation is attached in the Notes and Attachments area.</inlineHelpText>
        <label>Performance Evaluation Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PressRelease__c</fullName>
        <label>Press Release</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_254_Code__c</fullName>
        <label>Primary 254 Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_330_Code__c</fullName>
        <label>Primary 330 Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The entity that is paying us to do the work, in the case where we are not working directly for the owner. Only use this field when we are a subcontractor to another firm.</description>
        <inlineHelpText>The entity that is paying us to do the work, in the case where we are not working directly for the owner. Only use this field when we are a subcontractor to another firm.</inlineHelpText>
        <label>Prime</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Adjusted_Ceiling__c</fullName>
        <description>Ceiling adjusted by Content Managers</description>
        <inlineHelpText>Adjusted Ceiling after the initial Program was entered.</inlineHelpText>
        <label>Program Adjusted Ceiling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Manager_Status__c</fullName>
        <formula>IF( ISBLANK(Program_Manager__c ) ,&apos;&apos;,if(  ISPICKVAL(Program_Manager__r.Status__c ,&apos;Active&apos;),&apos;Active&apos;,&apos;Inactive&apos;))</formula>
        <inlineHelpText>Looks up in HR data and indicates whether or not the Program Manager named in the Program Manager field is currently employed at AECOM.</inlineHelpText>
        <label>Program Manager Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee responsible for managing the work.</description>
        <inlineHelpText>Employee responsible for managing the work.</inlineHelpText>
        <label>Program Manager</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipName>Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Master_Contract_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Master Contract Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Program</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Task Order</relationshipLabel>
        <relationshipName>TaskOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Mgr__c</fullName>
        <formula>Program_Manager__r.First_Name__c  + &quot; &quot; + Program_Manager__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Mgr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Owner__c</fullName>
        <formula>Owner__r.Id</formula>
        <label>Program Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Prime__c</fullName>
        <formula>Prime__r.Id</formula>
        <label>Program Prime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_ceiling__c</fullName>
        <description>The upper limit of the contract, used only on program records.</description>
        <inlineHelpText>The upper limit of the contract, used only on program records.</inlineHelpText>
        <label>Program Ceiling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_City__c</fullName>
        <inlineHelpText>City (or County or other area) where project is located, not necessarily where AECOM&apos;s staff is located.</inlineHelpText>
        <label>Project City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Comments__c</fullName>
        <description>Any additional detail for information only that should not output.</description>
        <inlineHelpText>Any additional detail for information only that should not output.</inlineHelpText>
        <label>Project Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Country__c</fullName>
        <inlineHelpText>Country where project is located, not necessarily where AECOM staff responsible for the project are located.</inlineHelpText>
        <label>Project Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_County__c</fullName>
        <inlineHelpText>County or counties associated with the Project City.</inlineHelpText>
        <label>Project County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <inlineHelpText>Long (complete) description of the project. Outputs on formatted project documents. May have sections with headers describing various services provided.</inlineHelpText>
        <label>Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Geography__c</fullName>
        <description>Select one or all Geographies</description>
        <inlineHelpText>Geographic area where the project is located, not necessarily the geography where the AECOM project staff are located.</inlineHelpText>
        <label>Project Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Geolocation__c</fullName>
        <label>Project Geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <displayFormat>PRJ-{0000000000}</displayFormat>
        <inlineHelpText>Generated by Salesforce - a unique identifier for this record.</inlineHelpText>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Key_Features__c</fullName>
        <description>Key features of the project.</description>
        <inlineHelpText>Key features of the project.</inlineHelpText>
        <label>Project Key Features</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Status__c</fullName>
        <formula>IF(ISBLANK(Project_Manager__c  ) ,&apos;&apos;,if( ISPICKVAL( Project_Manager__r.Status__c ,&apos;Active&apos;),&apos;Active&apos;,&apos;Inactive&apos;))</formula>
        <inlineHelpText>Looks at HR data and displays whether or not the Project Manager is currently an active AECOM employee.</inlineHelpText>
        <label>Project Manager Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee responsible for managing the overall program or project.</description>
        <inlineHelpText>Employee responsible for managing the overall program or project.</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipName>ProjectPM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Mgr__c</fullName>
        <formula>IF(Oracle_Project_Manager__c = NULL,  Project_Manager__r.First_Name__c + &apos; &apos; + Project_Manager__r.Last_Name__c, Oracle_Project_Manager__c)</formula>
        <label>Project Mgr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <inlineHelpText>Name of the project. Exports on project sheet templates. Can be longer than the Project Label, which is used for views.</inlineHelpText>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Office_Duns_Number__c</fullName>
        <description>DUNS number of the AECOM office with primary oversight of the project.</description>
        <inlineHelpText>DUNS number of the AECOM office with primary oversight of the project.</inlineHelpText>
        <label>Responsible Office DUNS Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Responsible_Office_Status__c</fullName>
        <formula>IF(ISBLANK( Project_Responsible_Office__c  ) ,&apos;&apos;,if( ISPICKVAL(  Project_Responsible_Office__r.PR_Office_Status__c ,&apos;Active&apos;),&apos;Active&apos;,&apos;Inactive&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Responsible Office Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Responsible_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The office initially responsible for this project.</description>
        <inlineHelpText>Displays the AECOM office initially responsible for this project.</inlineHelpText>
        <label>Project Responsible Office</label>
        <referenceTo>PR_Office_Resp__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Sheet_Location__c</fullName>
        <description>Used to output location if want something other than city state</description>
        <inlineHelpText>Used to output location if want something other than city state</inlineHelpText>
        <label>Project Sheet Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_StateProvinceEmirate__c</fullName>
        <inlineHelpText>State, province, or emirate where project is located, not necessarily where AECOM&apos;s staff is located.</inlineHelpText>
        <label>Project StateProvinceEmirate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Supergeography__c</fullName>
        <inlineHelpText>AECOM Geography where project is located, e.g., EMEA, AsiaPac, Americas, not necessarily geography of AECOM staff working on the project.</inlineHelpText>
        <label>Project Supergeography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REF__c</fullName>
        <label>REF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Note__c</fullName>
        <description>Any notes on the rating.</description>
        <inlineHelpText>Any notes on the rating.</inlineHelpText>
        <label>Rating Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ready_for_use__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used in Sharing Rule called &quot;ready for use&quot;</description>
        <inlineHelpText>Content Manager access only. If not checked, users other than Content Managers cannot see this record at all.</inlineHelpText>
        <label>Ready for use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_for_Future_Work__c</fullName>
        <description>Checked or not checked based on the performance evaluation.</description>
        <inlineHelpText>Checked or not checked based on the performance evaluation.</inlineHelpText>
        <label>Recommended for Future Work</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Bar__c</fullName>
        <formula>IF(  Contains($RecordType.DeveloperName,&apos;Project&apos;), IMAGE(&apos;https://aecom.my.salesforce.com/resource/1401366276000/ProjectNew&apos;, &apos;Project&apos;,30, 600), IF(Contains($RecordType.DeveloperName,&apos;Program&apos;), IMAGE(&apos;https://aecom.my.salesforce.com/resource/1401366584000/ProgramNew&apos;, &apos;Program&apos;, 30, 600) , IF(Contains($RecordType.DeveloperName,&apos;Task_Order&apos;), IMAGE(&apos;https://aecom.my.salesforce.com/resource/1401366610000/TaskOrderNew&apos;, &apos;Task Order&apos;,30, 600) ,&apos;&apos;)))</formula>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the project can be used if a client reference is required.</description>
        <inlineHelpText>Indicates whether the project can be used if a client reference is required.</inlineHelpText>
        <label>Referable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferenceLetterAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment in Reference Letter Database?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by chatter feeds for content managers to review changes</description>
        <inlineHelpText>Indicates that a user has submitted a comment or update via Chatter and the update is queued for action by a content manager.</inlineHelpText>
        <label>Review Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF330_del__c</fullName>
        <label>SF330</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchFee__c</fullName>
        <formula>IF ( RecordType.Name = &apos;Program&apos;,  Program_ceiling__c ,IF (Final_fee_value__c &gt;0, Final_fee_value__c,  IF(Modified_fee_value__c &gt;0,Modified_fee_value__c , Initial_fee_value__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for filtering and reporting. Contains Final Fee Value; if that is blank it contains Modified Fee Value; if both are blank it contains Initial Fee Value.</inlineHelpText>
        <label>SearchFee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Search_Completion_Date__c</fullName>
        <formula>NULLVALUE(Date_Actual_Completion__c, Date_Estimated_Completion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for filtering. Contains Date Actual Completion; if that is blank it contains Date Estimated Completion.</inlineHelpText>
        <label>Search Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_Construction_Cost__c</fullName>
        <formula>If(Actual_construction__c &gt; 0,Actual_construction__c, Estimated_construction__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for filtering and reporting. Displays Actual Construction value; if that field is blank it displays the Estimated Construction value.</inlineHelpText>
        <label>Search Construction Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <inlineHelpText>Services provided by AECOM, e.g., permitting and design. Mostly used for searching.</inlineHelpText>
        <label>Service Line</label>
        <picklist>
            <picklistValues>
                <fullName>Acoustics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adv. Design/App. Research/Policy Advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture / Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criteria AE Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demolition/Decommissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design-Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design-Construct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental + Ecological Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Assessments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Audits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Assessment</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Services_from_Opportunity__c</fullName>
        <label>Services from Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subcontracted_amount__c</fullName>
        <description>Pass-through fee to subcontractors from Oracle.</description>
        <inlineHelpText>Pass-through fee to subcontractors from Oracle.</inlineHelpText>
        <label>Subcontracted Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Task_Order_Fees__c</fullName>
        <inlineHelpText>Sums the fee values of all task orders created under this program</inlineHelpText>
        <label>Sum of Task Order Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Task_Order_Subcontracted_Cost__c</fullName>
        <inlineHelpText>Sums the values of the subcontracted amounts in all task orders created under this program</inlineHelpText>
        <label>Sum of Task Order Subcontracted Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>US_Federal_Overall_Rating__c</fullName>
        <description>Overall performance rating.</description>
        <inlineHelpText>Overall performance rating.</inlineHelpText>
        <label>US Federal Overall Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Exceptional/Outstanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good/Above Average/Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory/Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marginal/Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory/Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Federal_Rating_Date__c</fullName>
        <description>Rating date, whether final or interim.</description>
        <inlineHelpText>Rating date, whether final or interim.</inlineHelpText>
        <label>US Federal Rating Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>US_Federal_Rating_Status__c</fullName>
        <description>Interim or final.</description>
        <inlineHelpText>Interim or final.</inlineHelpText>
        <label>US Federal Rating Status</label>
        <picklist>
            <picklistValues>
                <fullName>Interim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Federal_Rating__c</fullName>
        <description>Federal government rating database.</description>
        <inlineHelpText>Federal government rating database.</inlineHelpText>
        <label>US Federal Rating System</label>
        <picklist>
            <picklistValues>
                <fullName>ACASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFCEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPQ</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>